added the setion for facilitators introduction

--- a/productDesignTask1.html
+++ b/productDesignTask1.html
@@ -513,6 +513,339 @@
 
                 </section>
             </section>
+
+            <section class="masters-faq">
+                
+                <section class="masters-container">
+                    <h2>Masters</h2>
+                    <div class="masters-row row-one">
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_four@2x.png" alt="Shervin Mashayekh">
+                                <figcaption>
+                                    <h3>Shervin Mashayekh</h3>
+                                    <p>Additive Product Manager</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_seven@2x.png" alt="Kianoosh Keyghobadi">
+                                <figcaption>
+                                    <h3>Kianoosh Keyghobadi</h3>
+                                    <p>Product Manager at Digikala</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_five@2x.png" alt="Hossein Vahdani">
+                                <figcaption>
+                                    <h3>Hossein Vahdani</h3>
+                                    <p>Content marketing specialist</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_six_2@2x.png" alt="Ali Babaei">
+                                <figcaption>
+                                    <h3>Ali Babaei</h3>
+                                    <p>Product design consultant</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_one@2x.png" alt="Kiarash Amalivand">
+                                <figcaption>
+                                    <h3>Kiarash Amalivand</h3>
+                                    <p>Head of product at Ap</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="masters-row row-two">
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_eight_2@2x.png" alt="Hesam Keramati">
+                                <figcaption>
+                                    <h3>Hesam Keramati</h3>
+                                    <p>Product designer at Bazaar</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_eight@2x.png" alt="Hassan Hemati">
+                                <figcaption>
+                                    <h3>Hassan Hemati</h3>
+                                    <p>Product designer at Alibaba</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_six@2x.png" alt="Sheragim Moadi">
+                                <figcaption>
+                                    <h3>Sheragim Moadi</h3>
+                                    <p>Marketing manager</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_two@2x.png" alt="Hadi Ebnodin">
+                                <figcaption>
+                                    <h3>Hadi Ebnodin</h3>
+                                    <p>Service designer</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="masters-row-with-overlay">
+                            <figure>
+                                <img src="images/panelist_nine@2x.png" alt="Moslem Ebrahimi">
+                                <figcaption>
+                                    <h3>Moslem Ebrahimi</h3>
+                                    <p>Typeface designer</p>
+                                </figcaption>
+                            </figure>
+                            <div class="overlay">
+                                <div class="social-icons-row">
+                                    <div class="facebook-icon">
+                                        <i class="icon-facebook-sign"></i>
+                                    </div>
+                                    <div class="twitter-icon">
+                                        <i class="icon-twitter"></i>
+                                    </div>
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                </div>
+                                <div class="brand-about-masters">
+                                    <div class="instagram-icon">
+                                        <i class="icon-instagram"></i>
+                                    </div>
+                                    <div>
+                                        <h3>About Masters</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                </section>
+                <section class="faq-container">
+                    
+                </section>
+
+            </section>
+
+            <section class="course-fee">
+
+            </section>
+
     </div>
 </body>
 </html>
