added course schedule and footer designs

--- a/productDesignTask1.html
+++ b/productDesignTask1.html
@@ -936,40 +936,118 @@
                     <h2>Projects</h2>
                 </div>
                 <div class="pro-body">
-                    <div class="todo-list">
-                        <li>Design To Do List app</li>
-                        <p>The previous student design project was the To Do list
-                            application product factory. The counter examples are
-                            the result of the efforts of the students and their 
-                            teamwork in the first place.
-                        </p>
-                        <ul>
-                            <li>Experience teamwork in a real product team and a collaborative efforts
-                                for a common goal.
-                            </li>
-                            <li>Survey real users and needs assessment and find  the most suitable solution to their problems.</li>
-                            <li>
-                                Design experience from notebooks to user interface design software.
-                            </li>
-                        </ul>
-                        <button>
-                            <span class="current">4</span>
-                            <span>/</span>
-                            <span class="total">15</span>
-                        </button>
+                    <div class="each-list">
+
+                        <div class="todo-list">
+                            <li class="todo-list-title">Design To Do List app</li>
+                            <p>The previous student design project was the To Do list
+                                application product factory. The counter examples are
+                                the result of the efforts of the students and their 
+                                teamwork in the first place.
+                            </p>
+                            <ul>
+                                <li>Experience teamwork in a real product team and a collaborative efforts
+                                    for a common goal.
+                                </li>
+                                <li>Survey real users and needs assessment and find  the most suitable solution to their problems.</li>
+                                <li>
+                                    Design experience from notebooks to user interface design software.
+                                </li>
+                            </ul>
+                            <button class="pagination-btn">
+                                <span class="current">4</span>
+                                <span>/</span>
+                                <span class="total">15</span>
+                            </button>
+                        </div>
+
+                        <div class="todo-list hide">
+                            <li class="todo-list-title">Design To Do List app</li>
+                            <p>The previous student design project was the To Do list
+                                application product factory. The counter examples are
+                                the result of the efforts of the students and their 
+                                teamwork in the first place.
+                            </p>
+                            <ul>
+                                <li>Experience teamwork in a real product team and a collaborative efforts
+                                    for a common goal.
+                                </li>
+                                <li>Survey real users and needs assessment and find  the most suitable solution to their problems.</li>
+                                <li>
+                                    Design experience from notebooks to user interface design software.
+                                </li>
+                            </ul>
+                            <button class="pagination-btn">
+                                <span class="current">5</span>
+                                <span>/</span>
+                                <span class="total">15</span>
+                            </button>
+                        </div>
+
                     </div>
                     <div class="slide-container">
                         <div class="slide-frame"></div>
                         <div class="slide-cross"></div>
                         <div class="ctrl-btn">
-                            <button>&lt;</button>
-                            <button>&gt;</button>
+                            <button class="pagination-btn">&lt;</button>
+                            <button class="pagination-btn">&gt;</button>
                         </div>
                     </div>
                 </div>
             </section>
         </section>
 
+        <section class="schedule">
+            <div class="schedule-container">
+                <div class="sch-title">
+                    <h2>Schedule</h2>
+                </div>
+                <div class="timeline">
+                    <p>Start of course</p>
+                    <div class="linear-timeline">
+                        <div class="circle start"></div>
+                        <div class="dashes"></div>
+                        <div class="circle end"></div>
+                    </div>
+                    <p>End of course</p>
+                </div>
+                <div class="date-show">
+                    <div class="start-date date">
+                        <span class="year">2019</span>
+                        <span>/</span>
+                        <span class="month">11</span>
+                        <span>/</span>
+                        <span class="day">11</span>
+                    </div>
+                    <div class="end-date date">
+                        <span class="year">2019</span>
+                        <span>/</span>
+                        <span class="month">11</span>
+                        <span>/</span>
+                        <span class="day">14</span>
+                    </div>
+                </div>
+                <div class="left-days">
+                    <button class="days-left-count">11</button>
+                    <p>Days left to sign up</p>
+                    <button class="register">Register</button>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="foot">
+                <div class="s-icons">
+                    <i class="icon-facebook"></i>
+                    <i class="icon-twitter"></i>
+                    <i class="icon-instagram"></i>
+                </div>
+                <div class="footer-logo">
+                    <img src="images/logo_dark_bg.png" alt="product-factory-logo">
+                </div>
+                <div class="contact">Contact Number: 0912-1234567</div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
